--- a/index.html
+++ b/index.html
@@ -8,52 +8,56 @@
     <title>Image gallery</title>
   </head>
   <body>
-<div class="img-bg">
+    <div class="img-bg">
 
-<nav id="mainNavbar" class="navbar navbar-light navbar-expand-md fixed-top p-0">
+       <nav id="mainNavbar" class="navbar navbar-light navbar-expand-md fixed-top p-0">
+          <div class="container">
+            <a class="navbar-brand" href="#">
+              <i class="far fa-image fa-1x"></i>&nbsp IMGS
+            </a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>        
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav mr-auto">
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Contact</a>
+              </div>
+              <!-- <div class="navbar-nav">
+                <a class="nav-link" href="#">Sign up</a>
+                <a class="nav-link" href="#">Login</a>
+              </div> -->
+           </div>
+        </div>
+      </nav>
+
+
+
+      <div id="header" class="jumbotron d-flex align-items-center mt-0">
+        <div class="container">
+          <h1><i class="fas fa-camera-retro fa"></i><b>  The Image Gallery<b></h1>
+      <!-- <i class="fa fa-camera-retro fa-5x"></i> -->
+          <p>A bunch of beautiful images that I didn't take.</p>
+          <hr>
+       </div>
+     </div>
+   <section class="gallery">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <i class="far fa-image fa-1x"></i>&nbsp IMGS</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>        </button>
-
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav mr-auto">
-        <a class="nav-link" href="#">About</a>
-        <a class="nav-link" href="#">Contact</a>
-      </div>
-      <!-- <div class="navbar-nav">
-        <a class="nav-link" href="#">Sign up</a>
-        <a class="nav-link" href="#">Login</a>
-      </div> -->
-    </div>
-  </div>
-</nav>
-
-
-
-    <div id="header" class="jumbotron d-flex align-items-center mt-0">
-      <div class="container">
-      <h1><i class="fas fa-camera-retro fa"></i><b>  The Image Gallery<b></h1>
-  <!-- <i class="fa fa-camera-retro fa-5x"></i> -->
-      <p>A bunch of beautiful images that I didn't take.</p>
-      <hr>
-    </div>
-  </div>
-  <section class="gallery">
-<div class="container">
-      <div class="row mb-5">
-      <!-- js code -->
+       <div class="row mb-5">
+        <!-- js code -->
+        </div>
       </div>
     </div>
+  </section>
+  <!-- <footer id="footer"> <a class="navbar-brand" href="#"><i>Go up</i></a>           </footer> -->
+  <footer id="footer"> 
+    <a class="navbar fixed-bottom navbar-brand" href="#"><i>Go up</i></a>
+  </footer>
   </div>
-</section>
-<!-- <footer id="footer"> <a class="navbar-brand" href="#"><i>Go up</i></a>           </footer> -->
-<footer id="footer"> <a class="navbar fixed-bottom navbar-brand" href="#"><i>Go up</i></a>           </footer>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
