--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">   <!--icons-->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/icons/imgs_favicon.ico" type="image/x-icon">
     <title>Image gallery</title>
   </head>
   <body>
